LendersApp/src/objects/Offer_Email_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCC__c</fullName>
        <label>BCC</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC__c</fullName>
        <label>CC</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer__c</fullName>
        <label>Footer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <inlineHelpText>To separate different keywords use comma</inlineHelpText>
        <label>To</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Offer Email Detail</label>
    <nameField>
        <label>Offer Email Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offer Email Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>